# studienarbeit-sudoku-solver

./: .travis.yml  Attempt4.html  README.md  Samples.html  SudokuAnalize.html  SudokuBase.html  SudokuParser.html  SudokuSolver.html  SudokuTransform.html  doc-index.html  index.html  mini_Attempt4.html  mini_Samples.html  mini_SudokuAnalize.html  mini_SudokuBase.html  mini_SudokuParser.html  mini_SudokuSolver.html  mini_SudokuTransform.html  stack.yaml  studienarbeit-sudoku-solver.cabal  studienarbeit-sudoku-solver.haddock  studienarbeit-sudoku-solver.txt
app/: Main.hs
benchmark/: Bench.hs
src/: Attempt1.hs  Attempt2.hs  Attempt3.hs  Attempt4.hs  Attempt4.html  Attempt5.hs  Samples.hs  Samples.html  SudokuAnalize.hs  SudokuAnalize.html  SudokuBase.hs  SudokuBase.html  SudokuParser.hs  SudokuParser.html  SudokuSolver.hs  SudokuSolver.html  SudokuTranform.hs  SudokuTransform.hs  SudokuTransform.html
test/: Samples.hs  SudokuAnalizeSpec.hs  SudokuBaseSpec.hs  SudokuParserSpec.hs  SudokuTransformSpec.hs
