name:                studienarbeit-sudoku-solver
version:             0.1.0.0
synopsis:            Algorithm to solve sudoku puzzles.
homepage:            https://github.com/ob-fun-ws17/studienarbeit-sudoku-solver
license:             GPL-3
license-file:        LICENSE
author:              Robin Wismeth
maintainer:          rwismeth@hm.edu
copyright:           2017 Robin Wismeth
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         Please see the README on Github at <https://github.com/ob-fun-ws17/studienarbeit-sudoku-solver>

library
  hs-source-dirs:      src
  exposed-modules:     SudokuBase
                     , SudokuAnalize
                     , SudokuTransform
                     , SudokuParser
                     , SudokuSolver
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable studienarbeit-sudoku-solver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , studienarbeit-sudoku-solver
  default-language:    Haskell2010

test-suite studienarbeit-sudoku-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , studienarbeit-sudoku-solver
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ob-fun-ws17/studienarbeit-sudoku-solver
